Criação das páginas Carrinho e Contato

--- a/src/app/produtos/produtos.component.html
+++ b/src/app/produtos/produtos.component.html
@@ -1,6 +1,6 @@
 <section class="product-list">
   <div class="product-list__card" *ngFor = "let produto of produtos">
-    <a href="" class="product-list__link" routerLink="/produtos/{{ produto.id }}">
+    <a class="product-list__link" routerLink="/produtos/{{ produto.id }}">
       <img [src]="produto.imagem">
       <h2 class="product-item__name"> {{ produto.descricao }} </h2>
       <p class="product-item__price"> {{ produto.preco | currency: 'BRL' }} </p>
