--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,44 +1,46 @@
 <header class="main-header">
+
   <h1 class="main-header__title" >
-    <span class="main-header__title--blue">MV</span> <span class="main-header__title--orange">Technology</span>
+      <span class="main-header__title--blue">MV</span> <span class="main-header__title--orange">Technology</span>
   </h1>
+
 
 <div class="container-menu">
 
   <nav class="main-header__menu">
     <ul>
       <li>
-         <a>Produtos</a> 
+         <a routerLink="/produtos">Produtos</a>
       </li>
-  
+
       <li>
-        <a>  
+        <a routerLink="/carrinho">
           <i class="fa-solid fa-cart-shopping"></i>
           Carrinho
-          <span class="badge-carrinho">0</span> 
-        </a> 
+          <span class="badge-carrinho">{{ carrinhoService.obtemCarrinho().length }}</span>
+        </a>
       </li>
-  
+
       <li>
-         <a>Contato</a> 
+         <a routerLink="/contato">Contato</a>
       </li>
-  
+
       <li>
          <a><i class="fa-brands fa-facebook"></i></a>
       </li>
-  
+
       <li>
-        <a><i class="fa-brands fa-instagram"></i></a> 
+        <a><i class="fa-brands fa-instagram"></i></a>
       </li>
-  
+
       <li>
         <a><i class="fa-brands fa-twitter"></i></a>
       </li>
-  
+
       <li>
         <a><i class="fa-brands fa-linkedin"></i></a>
       </li>
-  
+
     </ul>
   </nav>
 
@@ -47,5 +49,5 @@
     <button><i class="fa-solid fa-magnifying-glass"></i></button>
   </form>
 
-</div>  
+</div>
 </header>
