--- a/src/app/produtos/detalhe-produto/detalhe-produto.component.html
+++ b/src/app/produtos/detalhe-produto/detalhe-produto.component.html
@@ -1,24 +1,24 @@
 <section class="product__container">
   <div class="product-image__container">
-    <img src="/assets/mouse-3.jpg" >
+    <img [src]="produto?.imagem" >
   </div>
 
   <div class="product-description__container">
-    <h2 class= "product__name">Mouse Gamer Logitech</h2>
-    <h3 class="product__price">R$439,00</h3>
+    <h2 class= "product__name">{{ produto?.descricao }}</h2>
+    <h3 class="product__price">{{ produto?.preco | currency: "BRL" }}</h3>
 
     <p>Estoque Disponível</p>
     <label>
       Quantidade:
-      <input type="number">
+      <input type="number" [(ngModel)] = "quantidade" min="1">
       unidade(s)
     </label>
 
     <p class="product__avaiability">
-      10 unidade(s) em estoque
+      {{ produto?.quantidadeEstoque }} unidade(s) em estoque
     </p>
 
-    <button>Adicionar ao Carrinho</button>
+    <button (click) = "adicionarAoCarrinho()">Adicionar ao Carrinho</button>
 
   </div>
 </section>
