--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -43,11 +43,7 @@
 
     </ul>
   </nav>
-
-  <form class="search-form">
-    <input type="text">
-    <button><i class="fa-solid fa-magnifying-glass"></i></button>
-  </form>
-
+  <app-barra-pesquisa></app-barra-pesquisa>
 </div>
+
 </header>
