--- a/src/app/carrinho/carrinho.component.html
+++ b/src/app/carrinho/carrinho.component.html
@@ -1,4 +1,5 @@
 <h2 class="cart-title">Carrinho</h2>
+
 <div *ngIf="itensCarrinho.length > 0; else semProduto">
   <ul>
     <li *ngFor="let itemCarrinho of itensCarrinho">
@@ -7,7 +8,7 @@
       <p> Preço: {{ itemCarrinho.preco | currency: "BRL" }}</p>
       <label>
         Quantidade:
-        <input type="number" ([(ngModel)]="itemCarrinho.quantidade" (change)="calcularTotal()">
+        <input type="number" [(ngModel)]="itemCarrinho.quantidade" (change)="calcularTotal()">
       </label>
       <button class="remove-button" (click)="removerProdutoCarrinho(itemCarrinho.id)"><i class="fa-solid fa-xmark"></i></button>
     </li>
