Implementando funcinalidade de apagar carrinho

--- a/src/app/carrinho/carrinho.component.html
+++ b/src/app/carrinho/carrinho.component.html
@@ -15,6 +15,7 @@
   </ul>
   <h2 class="cart-total">Total: {{ total | currency: "BRL" }}</h2>
   <button class="buy-button" (click)="comprar()">Comprar</button>
+  <button class="clear-chart" (click)="limparCarrinho()">Limpar Carrinho</button>
 </div>
 
 <ng-template #semProduto> Nenhum produto foi adicionado ao carrinho </ng-template>
