--- a/src/app/carrinho/carrinho.component.css
+++ b/src/app/carrinho/carrinho.component.css
@@ -47,14 +47,19 @@ input {
   text-align: center;
 }
 
-.buy-button {
+.buy-button, .clear-chart {
   background-color: var(--blue);
   border: none;
   color: white;
   padding: 10px;
   font-size: 22px;
   margin-bottom: 10px;
+  margin-right: 10px;
   transition: .3s all;
+}
+
+.clear-chart{
+  background-color: red;
 }
 
 .buy-button:hover {
